Add tags to posts.

--- a/_posts/2014-12-25-kerbal-2.md
+++ b/_posts/2014-12-25-kerbal-2.md
@@ -5,6 +5,9 @@ subtitle:   "An introduction to KSP modding and realism"
 date:       2014-12-25 07:30:00 -0500
 author:     "Wisq"
 header-img: "img/2014/12/kerbal-2.jpg"
+tags:
+- Kerbal Space Program
+- modding
 ---
 
 Yesterday, [I introduced Kerbal Space Program][kerbal-1] and gave some tips and concepts to help get started with it.
