--- a/_posts/2014-12-26-kerbal-3.md
+++ b/_posts/2014-12-26-kerbal-3.md
@@ -5,6 +5,9 @@ subtitle:   "User interface, automation, and aesthetics"
 #date:       2014-12-25 07:30:00 -0500
 author:     "Wisq"
 header-img: "img/2014/12/kerbal-3.jpg"
+tags:
+- Kerbal Space Program
+- modding
 ---
 
 Previously, I [introduced Kerbal Space Program][kerbal-1], and started my modding series off with [some realism mods][kerbal-2].
