--- a/_posts/2014-12-31-kadet-1.md
+++ b/_posts/2014-12-31-kadet-1.md
@@ -5,6 +5,10 @@ subtitle:   "A modded Kerbal Space Program playthrough"
 date:       2014-12-31 12:00:00 -0500
 author:     "Wisq"
 header-img: "img/kadet/001/header.jpg"
+tags:
+- Kerbal Space Program
+- Space Kadet
+- playthrough
 ---
 
 *Space.  The final frontier.*
