--- a/_posts/2015-01-02-kadet-2.md
+++ b/_posts/2015-01-02-kadet-2.md
@@ -5,6 +5,10 @@ subtitle:   "Getting into orbit and avoiding catastrophe"
 date:       2015-01-02 11:25:00 -0500
 author:     "Wisq"
 header-img: "img/kadet/002/header.jpg"
+tags:
+- Kerbal Space Program
+- Space Kadet
+- playthrough
 ---
 
 <span class="note">
