--- a/_posts/2015-01-04-kadet-3.md
+++ b/_posts/2015-01-04-kadet-3.md
@@ -5,6 +5,10 @@ subtitle:   "Memoirs of a doomed Kerbal"
 date:       2015-01-04 18:59 -0500
 author:     "Wisq"
 header-img: "img/kadet/003/header.jpg"
+tags:
+- Kerbal Space Program
+- Space Kadet
+- playthrough
 ---
 
 <span class="note">
