--- a/_posts/2014-12-27-kerbal-4.md
+++ b/_posts/2014-12-27-kerbal-4.md
@@ -5,6 +5,9 @@ subtitle:   "Mods that extend and redefine KSP"
 date:       2014-12-27 17:00:00 -0500
 author:     "Wisq"
 header-img: "img/2014/12/kerbal-4.jpg"
+tags:
+- Kerbal Space Program
+- modding
 ---
 
 Having [introduced Kerbal Space Program][kerbal-1], and discussed some [realism][kerbal-2] and [user interface][kerbal-3] mods, it's time to get to the "meat" of Kerbal modding: the mods that add new stuff.
