Move, rename, and link.

--- a/_posts/2015-01-04-kadet-3.md
+++ b/_posts/2015-01-04-kadet-3.md
@@ -234,10 +234,11 @@ The [FAR][FAR] "DCA" flight assist is very handy for damping control inputs at h
 
 The "stuck launchpad" bug was almost certainly related to [Kerbal Joint Reinforcement][KJR].  There have been a lot of reports of trouble in the 3.x series, so while I fully expect Ferram will work those out eventually, I'm sticking with the older 2.4.5 for now.
 
-*Can we take the Korona 29 design to Minmus, too?  Will Bob forgive us for sending him right back out again?  What will we do with all this Science?  Join us next episode and find out!*
+*Can we take the Korona 29 design to Minmus, too?  Will Bob forgive us for sending him right back out again?  What will we do with all this Science?  Find out in the [next episode][kadet-4]!*
 
 [kadet-1]: /2014/12/31/kadet-1/ "Space Kadet: First Flight — Wisq.net"
 [kadet-2]: /2015/01/02/kadet-2/ "Space Kadet: You Spin Me Round — Wisq.net"
+[kadet-4]: /2015/01/12/kadet-4/ "Space Kadet: Fetch Quests — Wisq.net"
 [darkness]: http://www.prism.gatech.edu/~bnichols8/projects/kspdarkness/main.shtml "KSP Darkness Time Calculator"
 [FAR]: /2014/12/25/kerbal-2/#far "FAR — Kerbal Space Program: Keepin' It Real — Wisq.net"
 [TAC]: /2014/12/25/kerbal-2/#tac-life-support "TAC Life Support — Kerbal Space Program: Keepin' It Real — Wisq.net"
