--- a/_posts/2015-01-12-kadet-4.md
+++ b/_posts/2015-01-12-kadet-4.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      "Space Kadet: Running in Circles"
+title:      "Space Kadet: Fetch Quests"
 subtitle:   "Minmus!  Mun!  Minmus?  FOR SCIENCE!"
 date:       2015-01-12 12:00:00
 author:     "Wisq"
