Add fairings link.

--- a/_posts/2015-01-12-kadet-4.md
+++ b/_posts/2015-01-12-kadet-4.md
@@ -163,7 +163,7 @@ We gain so much orbital speed by the time we break out of the atmosphere that ou
 
 Breaking into space, I get a [ScienceAlert][sciencealert] notification that I should do a Soil Moisture scan.  Sure, why not?
 
-Well, I'll tell you why not: It involves extending a giant rotating boom, from *inside* the protective fairings — the ones we haven't blown off yet!
+Well, I'll tell you why not: It involves extending a giant rotating boom, from *inside* the [protective fairings][fairings] — the ones we haven't blown off yet!
 
 ![Korona 32 fairings mistake](/img/kadet/004/k32-fairings.jpg "Oops.")
 
@@ -188,6 +188,7 @@ Our total haul is <span class="science">830</span> Science.  Yeah, that'll do.  
 [realchute]: /2014/12/27/kerbal-4/#realchute "RealChute —Kerbal Space Program: Stellar Expansions — Wisq.net"
 [sciencealert]: /2014/12/26/kerbal-3/#sciencealert "Kerbal Space Program: Pretty Fly (for a UI) – ScienceAlert — Wisq.net"
 [US]: /2014/12/25/kerbal-2/#procedural-fairings--universal-storage "Universal Storage — Kerbal Space Program: Keepin' It Real — Wisq.net"
+[fairings]: /2014/12/25/kerbal-2/#procedural-fairings--universal-storage "Procedural Fairings — Kerbal Space Program: Keepin' It Real — Wisq.net"
 
 [station-science]: http://forum.kerbalspaceprogram.com/threads/54774 "Station Science — KSP Forum"
 [fuel-science]: http://forum.kerbalspaceprogram.com/threads/67359 "Fuel Science — KSP Forum"
