Add unique meta descriptions to all pages.

--- a/_posts/2014-12-24-kerbal-1.md
+++ b/_posts/2014-12-24-kerbal-1.md
@@ -2,6 +2,7 @@
 layout:     post
 title:      "Kerbal Space Program: An Introduction"
 subtitle:   "Tips and core concepts to get you started"
+description: "An introduction to Kerbal Space Program, and some useful tips and core concepts."
 date:       2014-12-24 14:00:00 -0500
 author:     "Wisq"
 header-img: "img/2014/12/kerbal-1.jpg"
