--- a/_posts/2014-12-25-kerbal-2.md
+++ b/_posts/2014-12-25-kerbal-2.md
@@ -2,6 +2,7 @@
 layout:     post
 title:      "Kerbal Space Program: Keepin' It Real"
 subtitle:   "An introduction to KSP modding and realism"
+description: "An introduction to KSP modding, starting with some mods that enhance realism."
 date:       2014-12-25 07:30:00 -0500
 author:     "Wisq"
 header-img: "img/2014/12/kerbal-2.jpg"
