--- a/_posts/2014-12-27-kerbal-4.md
+++ b/_posts/2014-12-27-kerbal-4.md
@@ -2,6 +2,7 @@
 layout:     post
 title:      "Kerbal Space Program: Stellar Expansions"
 subtitle:   "Mods that extend and redefine KSP"
+description: "A bunch of mods that add to KSP gameplay and expand or enhance the overall KSP experience."
 date:       2014-12-27 17:00:00 -0500
 author:     "Wisq"
 header-img: "img/2014/12/kerbal-4.jpg"
