--- a/_posts/2015-01-02-kadet-2.md
+++ b/_posts/2015-01-02-kadet-2.md
@@ -2,6 +2,7 @@
 layout:     post
 title:      "Space Kadet: You Spin Me Round"
 subtitle:   "Getting into orbit and avoiding catastrophe"
+description: "Second post in my Space Kadet series, in which we finally start our manned spaceflight program and get into orbit."
 date:       2015-01-02 11:25:00 -0500
 author:     "Wisq"
 header-img: "img/kadet/002/header.jpg"
