--- a/_posts/2015-01-12-kadet-4.md
+++ b/_posts/2015-01-12-kadet-4.md
@@ -2,6 +2,7 @@
 layout:     post
 title:      "Space Kadet: Fetch Quests"
 subtitle:   "Minmus!  Mun!  Minmus?  FOR SCIENCE!"
+description: "Fourth post in my Space Kadet series, in which we run around the Kerbin moon system collecting MAD SCIENCE."
 date:       2015-01-12 10:20:00 -0500
 author:     "Wisq"
 header-img: "img/kadet/004/header.jpg"
