--- a/_posts/2014-12-17-hatred.md
+++ b/_posts/2014-12-17-hatred.md
@@ -2,6 +2,7 @@
 layout:     post
 title:      "Courting Controversy"
 subtitle:   "Publicity at a price"
+description: "If you gamble with offensiveness, you risk pissing off the wrong people and losing … big time."
 date:       2014-12-17 14:00:00 -0500
 author:     "Wisq"
 header-img: "img/2014/12/hatred.jpg"
