--- a/_posts/2014-12-31-kadet-1.md
+++ b/_posts/2014-12-31-kadet-1.md
@@ -2,6 +2,7 @@
 layout:     post
 title:      "Space Kadet: First Flight"
 subtitle:   "A modded Kerbal Space Program playthrough"
+description: "The first post in my Space Kadet series, a playthrough of KSP with over 80 mods installed."
 date:       2014-12-31 12:00:00 -0500
 author:     "Wisq"
 header-img: "img/kadet/001/header.jpg"
