--- a/_posts/2015-01-04-kadet-3.md
+++ b/_posts/2015-01-04-kadet-3.md
@@ -2,7 +2,7 @@
 layout:     post
 title:      "Space Kadet: Dark Side of the Mun"
 subtitle:   "Memoirs of a doomed Kerbal"
-description: "Third post in my Space Kadet series, in which Bob Kerman contemplates his own demise at the hands of a solar eclipse and a power loss."
+description: "Part three of my Space Kadet series, in which Bob Kerman contemplates his own demise at the hands of a solar eclipse and a power loss."
 date:       2015-01-04 18:59 -0500
 author:     "Wisq"
 header-img: "img/kadet/003/header.jpg"
