--- a/_posts/2014-12-24-kerbal-1.md
+++ b/_posts/2014-12-24-kerbal-1.md
@@ -8,6 +8,7 @@ author:     "Wisq"
 header-img: "img/2014/12/kerbal-1.jpg"
 tags:
 - Kerbal Space Program
+- KSP intro
 ---
 
 From where I'm standing, things are looking pretty good for space exploration.  Major missions are reaching completion, new ones are being launched, NASA got *more* funding than they asked for, and public interest is at a level I don't remember since my childhood back in the 1980s.
