--- a/_posts/2015-01-12-kadet-4.md
+++ b/_posts/2015-01-12-kadet-4.md
@@ -189,6 +189,7 @@ Our total haul is <span class="science">830</span> Science.  Yeah, that'll do.  
 [kadet-1]: /2014/12/31/kadet-1/ "Space Kadet: First Flight — Wisq.net"
 [kadet-2]: /2015/01/02/kadet-2/ "Space Kadet: You Spin Me Round — Wisq.net"
 [kadet-3]: /2015/01/04/kadet-3/ "Space Kadet: Dark Side of the Mun — Wisq.net"
+[kadet-5]: /2015/02/04/kadet-5/ "Space Kadet: Origin of the Space-ies — Wisq.net"
 
 [realchute]: /2014/12/27/kerbal-4/#realchute "RealChute —Kerbal Space Program: Stellar Expansions — Wisq.net"
 [sciencealert]: /2014/12/26/kerbal-3/#sciencealert "Kerbal Space Program: Pretty Fly (for a UI) – ScienceAlert — Wisq.net"
