--- a/_posts/2015-01-12-kadet-4.md
+++ b/_posts/2015-01-12-kadet-4.md
@@ -184,7 +184,7 @@ The parachutes screw up yet again, but in a non-fatal way — two of the radial
 
 Our total haul is <span class="science">830</span> Science.  Yeah, that'll do.  It's space station time!
 
-*In our next episode: We design and build a space station! … Hopefully.  Unless I've forgotten something.*
+*In our next episode: [We design and build a space station!][kadet-5]*
 
 [kadet-1]: /2014/12/31/kadet-1/ "Space Kadet: First Flight — Wisq.net"
 [kadet-2]: /2015/01/02/kadet-2/ "Space Kadet: You Spin Me Round — Wisq.net"
