--- a/_posts/2015-04-13-mblade-1.md
+++ b/_posts/2015-04-13-mblade-1.md
@@ -67,7 +67,7 @@ In order to (re)gain Mjölnir, he would have to prove himself worthy.  Lacking a
 
 Moving carefully so as to avoid encountering Sea Raiders (coastal bandits) and getting kidnapped in his weakened state, I had Thor make his way to Wercheg.  With no food, no money, and no ability to take on the large bandit parties, he needed a quick way to eat.
 
-The arena fights were a good start, since knocking out a certain number of enemies would earn him a few dozen denars (currency), enough for  a loaf of bread.  Beating them all would net him 250 denars, but even though he could beat each in one or two strikes, there was no real way for him to last that long in his current state.  He could use his winnings to rent a room at the inn for a few weeks to recover, but that just didn't feel right — Thor is a man of *action*, damnit.
+The arena fights were a good start, since knocking out a certain number of enemies would earn him a few dozen denars (currency), enough for  a loaf of bread.  Beating them all would net him 250 denars, but even though he could beat each in one or two strikes, they could do the same to him in his current state.  He could use his winnings to rent a room at the inn for a few weeks to recover, but that just didn't feel right — Thor is a man of *action*, damnit.
 
 In need of a safe place to heal up and gain some early combat experience, I decided that Thor would take advantage of a new feature available as part of the [Freelancer][freelancer] mod (part of the *Tocan's Calradia* pack) — he would enlist in the army of the local lord.
 
